# newslens

./: .gitignore  README.md  license  pyproject.toml
.github/workflows/: publish.yml
example/: mcp.py
examples/: mcp_example.py  simple_example.py
src/newslens/: __init__.py
src/newslens/agents/: autogen.py  langchain.py  mcp.py  mcp_server.py
src/newslens/cli/: main.py
src/newslens/core/: config.py  engine.py  mock_engine.py  model.py  remote_engine.py
src/newslens/server/: api.py  schemas.py
src/newslens/training/: finetuner.py
tests/: mock_engine.py  test_api.py  test_cli.py  test_mcp.py  test_summarizer.py
