[project]
name = "newslens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arnab Santra", email = "arnabsantra248@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.14.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "peft>=0.19.1",
]

mcp = [
    "mcp>=1.27.0",
]
agents = [
    "langchain-tools>=0.1.34",
]
all = [
    "newslens[local,mcp,agents]",
]

[dependency-groups]
dev = [
    "newslens[mcp]",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# pytest.ini
[tool.pytest.init_options]
pythonpath = "src"
asyncio_mode = "auto"
testpaths = "tests"

[project.scripts]
# newslens = "newslens:main"
newslens = "newslens.cli.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
newslens = { workspace = true }
